fix align item issue in signle forum post reply card

--- a/src/components/forum/SingleForumPostReplies.module.scss
+++ b/src/components/forum/SingleForumPostReplies.module.scss
@@ -154,7 +154,6 @@
 .single-forum-reply-card {
     background-color: #f2f2f2;
     display: flex;
-    align-items: center;
     gap: 1.5rem; // 15px converted to rem
     padding: 2rem; // 20px converted to rem
     border-radius: 1rem; // 10px converted to rem
